fix: support for multiple images